# ngrams-loader

./: .gitignore  LICENSE  Main.hs  README.md  ngrams-loader.cabal
lib/Data/: Ngrams.hs
lib/Data/Ngrams/: Parser.hs  Process.hs  Type.hs
lib/Data/Ngrams/Database/: Sqlite.hs
